[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-tools"
version = "0.1.0"
description = "Modular AWS cloud operations CLI toolkit"
authors = [
    { name = "Augustine Nkansah" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3",
    "typer[all]"
]

[project.scripts]
cloud-tools = "cloud_tools.cli:app"